added checkboxes for specific muscle groups, may modify  labels to less scientific common terms

--- a/main.html
+++ b/main.html
@@ -35,13 +35,10 @@
         <input type ="checkbox" name="muscle" value ="Pectoralis major">Pectoralis Major<br>
         <input type ="checkbox" name="muscle" value ="Quadriceps femoris">Quadriceps Femoris<br>
         <input type ="checkbox" name="muscle" value ="Rectus abdominis">Rectus Abdmoninis<br>
-        <input type ="checkbox" name="muscle" value ="Biceps brachii">Biceps Brachii<br>
-        <input type ="checkbox" name="muscle" value ="Biceps brachii">Biceps Brachii<br>
-        <input type ="checkbox" name="muscle" value ="Biceps brachii">Biceps Brachii<br>
-        <input type ="checkbox" name="muscle" value ="Biceps brachii">Biceps Brachii<br>
-        <input type ="checkbox" name="muscle" value ="Biceps brachii">Biceps Brachii<br>
-        <input type ="checkbox" name="muscle" value ="Biceps brachii">Biceps Brachii<br>
-
+        <input type ="checkbox" name="muscle" value ="Serratus Anterior">Serratus Anterior<br>
+        <input type ="checkbox" name="muscle" value ="Soleus">Soleus<br>
+        <input type ="checkbox" name="muscle" value ="Trapezius">Trapezius<br>
+        <input type ="checkbox" name="muscle" value ="Triceps brachi">Triceps brachii<br>
       </p>
       <p><button class="w3-button w3-block w3-blue w3-left-align" type="submit"><i class="fa fa-search w3-margin-right"></i> Search</button></p>
     </form>
