--- a/main.html
+++ b/main.html
@@ -21,12 +21,12 @@
     <h6>Parameters</h6>
     <hr>
     <form action="/action_page.php" target="_blank">
-      <p><label><i class="fa fa-pencil-square-o"></i> Number of Exercises per Muscle Group</label></p>
+      <p><label><i class="fa fa-pencil-square-o"></i> Number of Exercises per Muscle Group: add more limitations here</label></p>
       <input class="w3-input w3-border" type="text" placeholder="0-12" name="CheckIn" required>
       <p><label><i class="fa fa-check-square-o"></i> Select Muscle Groups</label></p>
       <p><input type ="checkbox" name="muscle" value ="Anterior deltoid">Anterior Deltoid<br>
         <input type ="checkbox" name="muscle" value ="Biceps brachii">Biceps Brachii<br>
-        <input type ="checkbox" name="muscle" value ="Biceps femoris">Biceps Femoris<br>\
+        <input type ="checkbox" name="muscle" value ="Biceps femoris">Biceps Femoris<br>
         <input type ="checkbox" name="muscle" value ="Brachialis">Brachialis<br>
         <input type ="checkbox" name="muscle" value ="Gastrocnemius">Gastrocnemius<br>
         <input type ="checkbox" name="muscle" value ="Gluteus maximus">Gluteus Maximus<br>
